feat: separate admin account to store as env key
